--- a/app/provider/create.html
+++ b/app/provider/create.html
@@ -205,7 +205,7 @@
                         </div>
                         <h3 class="colored-text">1. Create</h3>
                         <p>
-                            Create a live video stream tied to your bitcoin address for free.
+                            Create a live video stream tied to your bitcoin address.
                         </p>
                     </div>
                 </div>
@@ -556,7 +556,7 @@
             <div class="row contact-links">
 
                 <div class="col-sm-12">
-                    <a href="mailto:hello@bitvideo.com" class="strong">questions@bitvideo.com</a>
+                    <h2> <a href="mailto:hello@bitvideo.com" class="strong">questions@bitvideo.com</a></h2>
                 </div>
             </div>
 
